button font too small on android devices, possible fix applied

--- a/styles/style.css
+++ b/styles/style.css
@@ -136,6 +136,7 @@ button {
 	padding: 5px;
 	margin: 5px;
 	background-color: #f0f3bd;
+	font-size: 1em;
 
 	box-shadow: 0.2em 0.2em 0 #7e7f63;
 }
